--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,15 @@
-# Application Configuration
+# ShopSherpa Configuration
 APP_NAME=ShopSherpa
 DEBUG=false
 ENVIRONMENT=development
+
+# Database (for future use)
+# DATABASE_URL=postgresql://user:password@localhost:5432/shopsherpa
+
+# Redis (for future use)
+# REDIS_URL=redis://localhost:6379/0
+
+# API Keys (for future use)
+# AMAZON_PA_API_KEY=your_amazon_pa_api_key
+# AMAZON_PA_SECRET_KEY=your_amazon_pa_secret_key
+# AMAZON_PA_ASSOCIATE_TAG=your_associate_tag
