--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,30 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "shopsherpa"
 version = "0.1.0"
-description = "ShopSherpa FastAPI service"
+description = "ShopSherpa MVP - AI product chooser for headphones"
 authors = [
-    {name = "ShopSherpa Team", email = "team@shopsherpa.com"},
+    {name = "ShopSherpa Team", email = "team@shopsherpa.com"}
+]
+readme = "README.md"
+requires-python = ">=3.11"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
     "pydantic-settings>=2.0.0",
+    "pydantic>=2.0.0",
 ]
-requires-python = ">=3.11"
-
-[tool.hatch.build.targets.wheel]
-packages = ["app"]
 
 [project.optional-dependencies]
 dev = [
@@ -27,7 +34,36 @@ dev = [
     "ruff>=0.1.0",
     "black>=23.0.0",
     "isort>=5.12.0",
+    "pre-commit>=3.5.0",
 ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["app*"]
+
+[tool.black]
+line-length = 88
+target-version = ['py311']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+line_length = 88
+known_first_party = ["app"]
 
 [tool.ruff]
 target-version = "py311"
@@ -50,17 +86,10 @@ ignore = [
 [tool.ruff.per-file-ignores]
 "__init__.py" = ["F401"]
 
-[tool.black]
-line-length = 88
-target-version = ['py311']
-
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-line_length = 88
-
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+addopts = "-v --tb=short"
+asyncio_mode = "auto"
