--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ dependencies = [
     "uvicorn[standard]>=0.24.0",
     "pydantic-settings>=2.0.0",
     "pydantic>=2.0.0",
+    "sqlalchemy>=2.0.0",
+    "alembic>=1.12.0",
+    "psycopg2-binary>=2.9.0",
 ]
 
 [project.optional-dependencies]
