--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
     "sqlalchemy>=2.0.0",
     "alembic>=1.12.0",
     "psycopg2-binary>=2.9.0",
+    "celery>=5.3.0",
+    "redis>=5.0.0",
 ]
 
 [project.optional-dependencies]
